últimas alterações - refatorando token para que seja um estado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Labeddit</title>
   </head>
-  <body class="h-full">
+  <body class="h-full selection:bg-orange-200">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
